Bug 1136670 - InContent Prefs - Implement alignment according to spec. r=jaws
UltraBlame original commit: 66d5f1e2e406c2d75da08a7ba57b7bb2bae1a27b

--- a/browser/themes/shared/incontentprefs/preferences.inc.css
+++ b/browser/themes/shared/incontentprefs/preferences.inc.css
@@ -193,6 +193,20 @@ treecol {
 
 
 
+#historyPane:not([selectedIndex="1"]) > #historyDontRememberPane,
+#historyPane:not([selectedIndex="2"]) > #historyCustomPane,
+#weavePrefsDeck:not([selectedIndex="1"]) > #hasAccount,
+#weavePrefsDeck:not([selectedIndex="2"]) > #needsUpdate,
+#weavePrefsDeck:not([selectedIndex="3"]) > #fxaDeterminingStatus,
+#weavePrefsDeck:not([selectedIndex="4"]) > #noFxaAccount,
+#weavePrefsDeck:not([selectedIndex="5"]) > #hasFxaAccount,
+#fxaLoginStatus:not([selectedIndex="1"]) > #fxaLoginUnverified,
+#fxaLoginStatus:not([selectedIndex="2"]) > #fxaLoginRejected {
+  visibility: collapse;
+}
+
+
+
 description > html|a {
   cursor: pointer;
 }
@@ -218,10 +232,6 @@ description > html|a {
   -moz-margin-end: 4px; 
 }
 
-#encryptionPanel {
-  margin-top: 15px;
-}
-
 #telemetryLearnMore,
 #FHRLearnMore,
 #crashReporterLearnMore {
@@ -244,6 +254,10 @@ description > html|a {
   #trackingProtectionImage {
     list-style-image: url(chrome://browser/skin/bad-content-blocked-16@2x.png);
   }
+}
+
+#showUpdateHistory {
+  -moz-margin-start: 0;
 }
 
 
